--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <style>
             body {
                 background: url('imgs/back.png') no-repeat top;
-                background-size: 100%;
+                background-size: cover;
                 height: 100%;
             }
 
