--- a/setup.html
+++ b/setup.html
@@ -12,7 +12,7 @@
         <style>
             body {
                 background: url('imgs/setup-back.jpg') no-repeat top;
-                background-size: 100%;
+                background-size: cover;
                 background-attachment: fixed;
                 height: 100%;
             }
